--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,6 @@ jobs:
     env:
       NODE_ENV: production
     steps:
-      - uses: actions/checkout@v3
-
       - name: Setup env
         uses: actions/setup-node@v1
         with:
@@ -28,5 +26,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./public
+          publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
           cname: pasaron.meme.ar
