--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
     env:
       NODE_ENV: production
     steps:
+      - uses: actions/checkout@v3
+
       - name: Setup env
         uses: actions/setup-node@v1
         with:
