--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,33 @@
-name: Build
+# name: Build
 
-on:
-  push:
-    branches:
-      - main
-  schedule:
-    - cron: "0 3 * * *"
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      NODE_ENV: production
-    steps:
-      - uses: actions/checkout@v3
+# on:
+#   push:
+#     branches:
+#       - main
+#   schedule:
+#     - cron: "0 3 * * *"
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     env:
+#       NODE_ENV: production
+#     steps:
+#       - uses: actions/checkout@v3
 
-      - name: Setup env
-        uses: actions/setup-node@v1
-        with:
-          node-version: v16.14.2
+#       - name: Setup env
+#         uses: actions/setup-node@v1
+#         with:
+#           node-version: v16.14.2
 
-      - name: Build
-        run: |
-          npm ci
-          npm run build
+#       - name: Build
+#         run: |
+#           npm ci
+#           npm run build
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          publish_dir: ./public
-          publish_branch: gh-pages
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          cname: pasaron.meme.ar
+#       - name: Deploy
+#         uses: peaceiris/actions-gh-pages@v3
+#         with:
+#           publish_dir: ./public
+#           publish_branch: gh-pages
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           cname: pasaron.meme.ar
