--- a/package.json
+++ b/package.json
@@ -1,29 +1,18 @@
 {
-  "name": "pasaronmemes",
+  "name": "countdown-ssr",
   "version": "1.0.0",
-  "description": "Ya cuántos días pasaron? Que faltan tantos?",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "eleventy --serve --watch",
-    "build:clean": "rimraf public/",
-    "build:site": "eleventy",
-    "build:pre": "node pre-build.js",
-    "build": "npm run build:pre && npm run build:clean && npm run build:site"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/baldosa/pasaron.git"
-  },
-  "author": "Ema",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/baldosa/pasaron/issues"
-  },
-  "homepage": "https://pasaron.meme.ar/",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.2",
-    "canvas": "^2.11.2",
-    "moment": "^2.29.4",
-    "rimraf": "^3.0.2"
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
